gcc/testsuite/rust/rustc/ui/suggestions/issue-104327.rs
trait Bar {}

trait Foo {
    fn f() {}
}

impl Foo for dyn Bar {}

fn main() {
    Foo::f();
// { dg-error ".E0790." "" { target *-*-* } .-1 }
}

